Resolving Issues with MR Unit Tests